# masters-app

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
api/v1/: pagination.py  urls.py
api/v1/auth/: serializers.py  urls.py  views.py
api/v1/courses/: serializers.py  urls.py  views.py
api/v1/materials/: serializers.py
api/v1/themes/: serializers.py
api/v1/users/: serializers.py  urls.py  views.py
core/services/: crud.py
courses/: admin.py  models.py
courses/migrations/: 0001_initial.py  0002_theme_course_alter_theme_name_and_more.py
courses/services/: queryset.py
docs/: models.dbml
materials/: admin.py  models.py
materials/migrations/: 0001_initial.py  0002_material_order.py
matlog/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: web.sh
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_is_staff.py  0003_user_groups_user_is_superuser_user_user_permissions.py
users/services/: crud.py
