[project]
name = "software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
]
[tool.ruff]
line-length = 80
exclude = [
    "venv",
    ".vscode",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "**/migrations/**",
]


[tool.ruff.lint]
extend-select = ["E501", "I", "N", "PT", "PL", "RUF"]
ignore = ["PLC0415"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
